--- a/locale/ja-JP/strings.properties
+++ b/locale/ja-JP/strings.properties
@@ -11,5 +11,7 @@ showNextTweets=次の%S件を表示
 thereAreNewDMs=新しい <a target="_blank" href="http://twitter.com/inbox">ダイレクトメッセージ</a>があります。
 settings=設定
 alreadyOpened=Twitter は既に別のタブで開かれています。
+
+#Extension descriptions
 extensions.readalltweets@masahal.info.name=Read All Tweets
 extensions.readalltweets@masahal.info.description=未読発言のみ古いものから順に表示します。指定のリストにだけこのアドオンを適用することもできます。
