--- a/locale/nl/strings.properties
+++ b/locale/nl/strings.properties
@@ -10,6 +10,7 @@ failedToGetNewReples=Ophalen nieuwe antwoorden mislukt.
 showNextTweets=Volgende %S tweets weergeven
 thereAreNewDMs=Er zijn nieuwe <a target="_blank" href="http://twitter.com/inbox">DM’s</a>.
 settings=Instellingen
+alreadyOpened=Twitter is already opened in another tab.
 #Extension descriptions
 
 extensions.readalltweets@masahal.info.name=Alle tweets lezen
