--- a/locale/zh-CN/strings.properties
+++ b/locale/zh-CN/strings.properties
@@ -10,6 +10,7 @@ failedToGetNewReples=获取新的回复失败.
 showNextTweets=显示下一  %S tweets 消息
 thereAreNewDMs=新的 <a target="_blank" href="http://twitter.com/inbox">DM(私密消息)</a>.
 settings=设置
+alreadyOpened=Twitter is already opened in another tab.
 #Extension descriptions
 
 extensions.readalltweets@masahal.info.name=阅读所有 tweets 消息
