--- a/locale/es-ES/strings.properties
+++ b/locale/es-ES/strings.properties
@@ -10,6 +10,7 @@ failedToGetNewReples=Fallo al recuperar nuevas menciones.
 showNextTweets=Mostar siguientes %S tweets
 thereAreNewDMs=Hay nuevos <a target="_blank" href="http://twitter.com/inbox">Mensajes Directos</a>.
 settings=configuraciones
+alreadyOpened=Twitter is already opened in another tab.
 #Extension descriptions
 
 extensions.readalltweets@masahal.info.name=Leer todas los Tweets (linea de tiempo invertida)
