--- a/locale/vi/strings.properties
+++ b/locale/vi/strings.properties
@@ -10,6 +10,7 @@ failedToGetNewReples=Lỗi khi nhân câu trả lời mới.
 showNextTweets=Hiển thị %S tweet tiếp theo
 thereAreNewDMs=Có <a target="_blank" href="http://twitter.com/inbox">DMs</a>mới.
 settings=Thiết đặt
+alreadyOpened=Twitter is already opened in another tab.
 #Extension descriptions
 
 extensions.readalltweets@masahal.info.name=Đọc tất cả các tweet
