--- a/locale/it/strings.properties
+++ b/locale/it/strings.properties
@@ -10,7 +10,7 @@ failedToGetNewReples=Recupero dei nuovi messaggi di risposta riferiti al proprio
 showNextTweets=Visualizza i prossimi %S messaggi
 thereAreNewDMs=Vi sono nuovi <a target="_blank" href="http://twitter.com/inbox">messaggi diretti</a>.
 settings= - Opzioni
-alreadyOpened=Twitter is already opened in another tab.
+alreadyOpened=Si sta già utilizzando Twitter in un'altra scheda del browser
 #Extension descriptions
 
 extensions.readalltweets@masahal.info.name=Read All Tweets
