--- a/locale/nl/strings.properties
+++ b/locale/nl/strings.properties
@@ -10,8 +10,8 @@ failedToGetNewReples=Ophalen nieuwe antwoorden mislukt.
 showNextTweets=Volgende %S tweets weergeven
 thereAreNewDMs=Er zijn nieuwe <a target="_blank" href="http://twitter.com/inbox">DM’s</a>.
 settings=Instellingen
-alreadyOpened=Twitter is already opened in another tab.
+alreadyOpened=Twitter is al geopend in een ander tabblad.
 #Extension descriptions
 
-extensions.readalltweets@masahal.info.name=Alle tweets lezen
-extensions.readalltweets@masahal.info.description=Voor gebruikers die alle tweets op de Twittertijdslijn lezen. Geef alleen ongelezen tweets weer in omgekeerd chronologische volgorde. U kunt deze add-on alleen toepassen op een opgegeven lijst.
+extensions.readalltweets@masahal.info.name=Alle tweets lezen (volgorde omkeren)
+extensions.readalltweets@masahal.info.description=Geef ongelezen tweets weer in omgekeerd chronologische volgorde. U kunt deze add-on alleen toepassen op een opgegeven lijst.
