--- a/locale/zh-CN/readalltweets.dtd
+++ b/locale/zh-CN/readalltweets.dtd
@@ -4,9 +4,9 @@
 <!ENTITY notifyDM "DM(私密消息)通知">
 <!ENTITY applyThisAddOnToFollowingList "应用此扩展到 following(跟随)列表">
 <!ENTITY writeListInThisFormUserList "following(跟随)列表使用的布局：用户名/列表名">
-<!ENTITY setAllTweetsUntilNowAsAlreadyRead "标记现有的 tweets 消息为已读">
-<!ENTITY changeColorOfNewTweets "改变新 tweets 消息的颜色">
-<!ENTITY numOfTweetsShowingAtOneTime "显示一段时间的 tweets 消息数目：">
-<!ENTITY checkIntervalOfNewTweets "新 tweets 消息检查间隔：">
+<!ENTITY setAllTweetsUntilNowAsAlreadyRead "标记现有的 tweets 为已读">
+<!ENTITY changeColorOfNewTweets "改变新 tweets 的颜色">
+<!ENTITY numOfTweetsShowingAtOneTime "显示一段时间的 tweets 数目：">
+<!ENTITY checkIntervalOfNewTweets "新 tweets 检查间隔：">
 <!ENTITY minutes "分">
 <!ENTITY disableThisAddonTemporarily "暂时禁用此扩展">
