--- a/locale/pt-BR/strings.properties
+++ b/locale/pt-BR/strings.properties
@@ -10,7 +10,7 @@ failedToGetNewReples=Falha ao buscar novas respostas.
 showNextTweets=Mostrar próximas %S mensagens
 thereAreNewDMs=Existem novas <a target="_blank" href="http://twitter.com/inbox">DMs</a>.
 settings=configurações
-alreadyOpened=Twitter is already opened in another tab.
+alreadyOpened=O Twitter já está aberto em outra aba.
 #Extension descriptions
 
 extensions.readalltweets@masahal.info.name=Ler todas mensagens
