--- a/locale/zh-CN/strings.properties
+++ b/locale/zh-CN/strings.properties
@@ -1,17 +1,17 @@
-belowHaveBeenSettedAsAlreadyRead=下面的 tweets 消息已被标记为已读。新的 tweets 消息将被按时间顺序反向显示。
-belowAreAlreadyRead=下面的 tweets 消息已读.
+belowHaveBeenSettedAsAlreadyRead=下面的 tweets 已被标记为已读。新的 tweets 将被按时间顺序反向显示。
+belowAreAlreadyRead=下面的 tweets 已读.
 goToTop=返回顶部
-moveToUnreadTweets=移动到未读 tweets 消息
+moveToUnreadTweets=移动到未读 tweets
 processing=处理中...
-notAllOfNewTweetsCouldBeGetted=并不是所有的新 tweets 消息都能被取得。只有被取得的 tweets 消息才能被显示。
+notAllOfNewTweetsCouldBeGetted=并不是所有的新 tweets 都能被取得。只有被取得的 tweets 才能被显示。
 notAllOfNewRepliesCouldBeGetted=并不是所有的新回复都能被取得。只有被取得的回复才能被显示。
-failedToGetNewTweets=获取新的 tweets 消息失败.
+failedToGetNewTweets=获取新的 tweets 失败.
 failedToGetNewReples=获取新的回复失败.
-showNextTweets=显示下一  %S tweets 消息
+showNextTweets=显示下一  %S tweets
 thereAreNewDMs=新的 <a target="_blank" href="http://twitter.com/inbox">DM(私密消息)</a>.
 settings=设置
-alreadyOpened=Twitter is already opened in another tab.
+alreadyOpened=Twitter 已经在另一个标签页打开。
 #Extension descriptions
 
-extensions.readalltweets@masahal.info.name=阅读所有 tweets 消息
-extensions.readalltweets@masahal.info.description=For people who read all tweets on Twitter time-line, show only unread tweets in reverse chronological order. You can apply this add-on only to a specified list.
+extensions.readalltweets@masahal.info.name=Read All Tweets(Reverse timeline)
+extensions.readalltweets@masahal.info.description=Show unread tweets in reverse chronological order. You can apply this add-on only to a specified list.
