--- a/locale/tr-TR/strings.properties
+++ b/locale/tr-TR/strings.properties
@@ -10,7 +10,7 @@ failedToGetNewReples=Yeni yanıtlar alınamadı.
 showNextTweets=Sıradaki %S tweeti göster
 thereAreNewDMs=Yeni <a target="_blank" href="http://twitter.com/inbox">mesajlar</a> var.
 settings=ayarlar
-alreadyOpened=Twitter is already opened in another tab.
+alreadyOpened=Twitter başka bir sekmede zaten açık.
 #Extension descriptions
 
 extensions.readalltweets@masahal.info.name=Tüm Tweetleri Oku
